--- a/www/css/index.css
+++ b/www/css/index.css
@@ -41,7 +41,6 @@ body {
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
 }
 
@@ -50,7 +49,7 @@ body {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:50%;
-    top:50%;
+    top:30%;
     height:50px;                   /* text area height */
     width:225px;                   /* text area width */
     text-align:center;
@@ -102,14 +101,44 @@ h1 {
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 @-webkit-keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+/* App */
+#detection {
+  margin-top: 15px;
+}
+.button {
+  border: 2px solid #25ABE8;
+  color: #25ABE8;
+  width: 125px;
+  display: block;
+  margin: 0 auto;
+  font-size: 16px;
+  padding: 4px 15px;
+  text-transform: capitalize;
+  -webkit-transition: background-color 500ms linear;
+    -ms-transition: background-color 500ms linear;
+    transition: background-color 500ms linear;
+}
+.button:hover {
+  background: #25ABE8;
+  color: white;
+  width: 85%;
+}
+#alert {
+    font: normal 16px Verdana, Arial, sans-serif;
+    margin: 15px 0;
+}
+.left {
+    float: left;
 }
